# tycho-protocol-sdk

./: .gitignore  .gitmodules  LICENSE  README.md  buf.yaml  docker-compose.yaml  remappings.txt
propeller-swap-encoders/: environment_dev.yaml  pyproject.toml  requirements.txt
propeller-swap-encoders/propeller_swap_encoders/: balancer.py  curve.py
propeller-swap-encoders/propeller_swap_encoders/tests/: test_balancer.py  test_curve.py
substreams/: Cargo.toml  Readme.md  check.sh  release.sh  rustfmt.toml
substreams/base-aerodrome-slipstream/: Cargo.toml  base-aerodrome-slipstream.yaml  build.rs  rust-toolchain.toml
substreams/base-aerodrome-v1/: Cargo.toml  base-aerodrome-v1.yaml
substreams/base-aerodrome-v1/src/: lib.rs  traits.rs
substreams/crates/substreams-helper/: Cargo.toml
substreams/crates/tycho-substreams/: Cargo.toml  Changelog.md  Readme.md  buf.gen.yaml  rustfmt.toml
substreams/ethereum-ambient/: Cargo.toml  Readme.md  buf.gen.yaml  substreams.yaml
substreams/ethereum-ambient/proto/: ambient.proto
substreams/ethereum-ambient/src/: lib.rs  utils.rs
substreams/ethereum-balancer/: Cargo.toml  Readme.md  build.rs  integration_test.tycho.yaml  substreams.yaml  test_assets.yaml
substreams/ethereum-balancer-v2/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-balancer-v2/abi/: erc_linear_pool_factory.json  get_abis.py  managed_pool_factory.json
substreams/ethereum-balancer-v2/src/: modules.rs  pool_factories.rs
substreams/ethereum-balancer-v3/: Cargo.toml  Readme.md  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-balancer-v3/abi/: stable_pool_contract.abi.json  stable_pool_factory_contract.abi.json  weighted_pool_contract.abi.json  weighted_pool_factory_contract.abi.json
substreams/ethereum-balancer-v3/src/: lib.rs  modules.rs  pool_factories.rs
substreams/ethereum-balancer/abi/: README.md  gearbox_linear_pool_factory.json  get_abis.py  silo_linear_pool_factory.json  yearn_linear_pool_factory.json
substreams/ethereum-balancer/proto/: balancer.proto
substreams/ethereum-balancer/src/: contract_changes.rs  lib.rs  modules.rs  pool_factories.rs
substreams/ethereum-curve/: Cargo.toml  README.md  build.rs  integration_test.tycho.yaml  params.json  params.py  run.sh  substreams.yaml  test_assets.yaml
substreams/ethereum-curve/abi/: crypto_pool_factory.json  crypto_swap_registry.json  get_abis.py  meta_pool_factory.json  twocrypto_factory.json
substreams/ethereum-curve/evm/: CurveSwapAdapter.evm.runtime
substreams/ethereum-curve/proto/: factory.proto  pool.proto
substreams/ethereum-curve/src/: consts.rs  lib.rs  modules.rs  pool_changes.rs  pool_factories.rs  pools.rs
substreams/ethereum-dodo-v2/: Cargo.toml  ethereum-dodo-v2.yaml
substreams/ethereum-dodo-v2/abi/: DSP.json  DSPFactory.json  DVM.json  GSP.json  GSPFactory.json  dpp.json  dpp_factory.json  dvm_factory.json
substreams/ethereum-dodo-v2/src/: lib.rs
substreams/ethereum-ekubo/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-ekubo-v2/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-ekubo-v2/abi/: twamm.json
substreams/ethereum-ekubo-v2/proto/: ekubo.proto
substreams/ethereum-ekubo-v2/src/: deployment_config.rs  lib.rs  pool_config.rs  pool_key.rs  store.rs  twamm.rs
substreams/ethereum-ekubo/proto/: ekubo.proto
substreams/ethereum-ekubo/src/: deployment_config.rs  sqrt_ratio.rs
substreams/ethereum-etherfi/: Cargo.toml  ethereum-etherfi.yaml  integration_test.tycho.yaml
substreams/ethereum-etherfi/abi/: eeth.json  liquidity_pool.json
substreams/ethereum-etherfi/src/: lib.rs
substreams/ethereum-maverick/: Cargo.toml  substreams.yaml
substreams/ethereum-maverick-v2/: Cargo.toml  ethereum-maverick-v2.yaml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-maverick-v2/abi/: factory.json  pool.json
substreams/ethereum-maverick-v2/src/: lib.rs  modules.rs
substreams/ethereum-maverick/src/: lib.rs  modules.rs
substreams/ethereum-pancakeswap-v3/: Cargo.toml  ethereum-pancakeswap-v3.yaml
substreams/ethereum-sfrax/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-sfrax/abi/: stakedfrax_contract.abi.json
substreams/ethereum-sfrax/proto/: contract.proto
substreams/ethereum-sfrax/src/: lib.rs  modules.rs
substreams/ethereum-sfraxeth/: Cargo.toml  build.rs  integration_test.tycho.yaml  rust-toolchain.toml  substreams.yaml
substreams/ethereum-sfraxeth/proto/: contract.proto
substreams/ethereum-sfraxeth/src/: lib.rs  modules.rs
substreams/ethereum-template/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml  test_assets.yaml
substreams/ethereum-template-factory/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-template-factory/src/: lib.rs  modules.rs  pool_factories.rs
substreams/ethereum-template-singleton/: Cargo.toml  build.rs  substreams.yaml
substreams/ethereum-template-singleton/abi/: .gitkeep
substreams/ethereum-template-singleton/src/: lib.rs  modules.rs  pool_factories.rs
substreams/ethereum-template/src/: lib.rs  modules.rs  pool_factories.rs
substreams/ethereum-uniswap-v2/: Cargo.toml  Makefile  arbitrum-uniswap-v2.yaml  base-uniswap-v2.yaml  ethereum-pancakeswap-v2.yaml  ethereum-pancakeswap.yaml  ethereum-sushiswap-v2.yaml  ethereum-sushiswap.yaml  ethereum-uniswap-v2.yaml  unichain-uniswap-v2.yaml
substreams/ethereum-uniswap-v2/src/: store_key.rs  traits.rs
substreams/ethereum-uniswap-v3/: Cargo.toml  arbitrum-uniswap-v3.yaml  ethereum-uniswap-v3.yaml
substreams/ethereum-uniswap-v3-logs-only/: Cargo.toml  Makefile  base-uniswap-v3.yaml  build.rs  ethereum-uniswap-v3.yaml  unichain-uniswap-v3.yaml
substreams/ethereum-uniswap-v3-logs-only/src/: lib.rs
substreams/ethereum-uniswap-v3/src/: lib.rs  traits.rs
substreams/ethereum-uniswap-v4/: Cargo.toml  base-uniswap-v4.yaml  buf.gen.yaml  build.rs  ethereum-uniswap-v4.yaml  sepolia-uniswap-v4.yaml  unichain-uniswap-v4.yaml
(+467 files in other folders)
