[package]
name = "substreams-ethereum-ambient"
version = "0.5.2"
edition = "2021"

[lib]
name = "substreams_ethereum_ambient"
crate-type = ["cdylib"]

[dependencies]
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "f90c33b" }
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
prost = "0.11"
hex-literal = "0.4.1"
ethabi = "18.0.0"
hex = "0.4.3"
bytes = "1.5.0"
anyhow = "1.0.75"
tiny-keccak = "2.0.2"
num-bigint = { version = "0.4.4", features = [] }
quote = "1.0.33"
