[package]
name = "ethereum-etherfi"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_etherfi"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
prost = "0.11"
substreams-helper = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "22f70ca" }
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "22f70ca" }
anyhow = "1.0.95"
ethabi = "18.0.0"
num-bigint = "0.4.6"
hex = "0.4.3"
itertools = "0.10.5"
serde = "1.0.217"
serde-sibor = "0.1.0"


[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9.9"
