[package]
name = "ethereum-sfraxeth"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_sfraxeth"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal.workspace = true
num-bigint = "0.4"
num-traits = "0.2.15"
prost.workspace = true
prost-types = "0.11"
substreams.workspace = true
substreams-ethereum.workspace = true
hex.workspace = true
tycho-substreams.workspace = true
itertools = "0.12.0"
anyhow = "1.0.75"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"
regex = "1.10.4"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
