[package]
name = "ethereum-uniswap-v3-logs-only"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_uniswap_v3_logs_only"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-ethereum.workspace = true
prost.workspace = true
ethabi.workspace = true
anyhow = { workspace = true, features = [] }
hex-literal.workspace = true
substreams-helper.workspace = true
tycho-substreams.workspace = true
num-bigint = "0.4.4"
hex.workspace = true
tiny-keccak = "2.0"
substreams-entity-change = "1.3"
itertools = "0.13.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow.workspace = true
substreams-ethereum.workspace = true
