[package]
name = "substreams-helper"
description = "Substreams Helper Crate - by Messari"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://messari.io/"
repository = "https://github.com/messari/substreams/substreams-helper"

[dependencies]
ethabi.workspace = true
hex.workspace = true
hex-literal.workspace = true
prost.workspace = true
prost-types.workspace = true
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
thiserror = "1.0.37"
downcast-rs = "1.2.0"
substreams-entity-change = "1.1.0"
base64 = "0.13.0"


[build-dependencies]
anyhow.workspace = true
