[package]
name = "substreams-helper"
description = "Substreams Helper Crate - by Messari"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://messari.io/"
repository = "https://github.com/messari/substreams/substreams-helper"

[dependencies]
ethabi = "18.0.0"
hex = "0.4.3"
hex-literal = "0.4.1"
prost = "0.11"
prost-types = "0.12.3"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
thiserror = "1.0.37"
downcast-rs = "1.2.0"
substreams-entity-change = "1.1.0"
base64 = "0.13.0"


[build-dependencies]
anyhow = "1.0.75"
