[package]
name = "tycho-substreams"
version = "0.2.0"
edition = "2021"
description = "Tycho substreams development kit, contains tycho-indexer block changes model and helper functions for common indexing tasks."
repository = "https://github.com/propeller-heads/tycho-protocol-sdk/tree/main/substreams/crates/tycho-substreams"
homepage = "https://www.propellerheads.xyz/tycho"
documentation = "https://docs.propellerheads.xyz/tycho"
keywords = ["propellerheads", "solver", "defi", "dex", "mev"]
license = "MIT"
categories = ["finance", "wasm"]
readme = "README.md"

[dependencies]
substreams-ethereum = "0.9.9"
substreams = "0.5.22"
prost = "0.11"
hex = "0.4.3"
itertools = "0.12.0"
ethabi = "18.0.0"
num-bigint = "0.4.4"
serde = "1.0.204"
serde_json = "1.0.120"
